# diabetes-prediction

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  diabetes_home.py  diabetes_main.py  diabetes_plots.py  diabetes_predict.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy-hf.yml
app/: home.py  plots.py  predict.py
models/: metrics.json  model.joblib  model_card.md
src/: __init__.py  config.py  data.py  explain.py  inference.py  pipelines.py  train.py
tests/: test_data.py  test_explain.py  test_inference.py  test_pipeline.py
