[project]
name = "diabetes-prediction"
version = "1.0.0"
description = "Responsible ML screening demo for diabetes risk on the Pima Indians dataset."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = import sorting, UP = pyupgrade, B = bugbear.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter; long strings in UI are fine
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
